--- a/app/views/shared/_videoroom.html.erb
+++ b/app/views/shared/_videoroom.html.erb
@@ -16,20 +16,20 @@
     <% if doctor_signed_in? %>
       <% if @videoroom.url.present? %>
         <a href=<%= @videoroom.url %> target="_blank">
-          <p class="mt-3 btn btn-primary" style="color: white;">New call<i class="fas fa-phone-volume ml-3" style="color: white;"></i></p>
+          <p class="mt-3 btn btn-primary" style="color: white;">Call<i class="fas fa-phone-volume ml-3" style="color: white;"></i></p>
         </a>
       <% else %>
         <a href="https://apps.google.com/meet/" target="_blank">
-          <p class="mt-3 btn btn-primary" style="color: white;">New call<i class="fas fa-phone-volume ml-3" style="color: white;"></i></p>
+          <p class="mt-3 btn btn-primary" style="color: white;">Call<i class="fas fa-phone-volume ml-3" style="color: white;"></i></p>
         </a>
       <% end %>
     <% else %>
       <% if @videoroom.url.present? %>
         <a href=<%= @videoroom.url %> target="_blank">
-          <p class="card-text mt-3 font-weight-bold text-center" style="color: white;">New call<i class="fas fa-phone-volume ml-3" style="color: white;"></i></p>
+          <p class="mt-3 btn btn-primary" style="color: white;">Call<i class="fas fa-phone-volume ml-3" style="color: white;"></i></p>
         </a>
       <% else %>
-        <p class="card-text mt-3 font-weight-bold text-center" style="color: white;">No call scheduled<i class="fas fa-phone-volume ml-3" style="color: white;"></i></p>
+        <p class="mt-3 btn btn-primary" style="color: white;">No call scheduled<i class="fas fa-phone-volume ml-3" style="color: white;"></i></p>
       <% end %>
     <% end %>
   </div>
