--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -8,7 +8,7 @@
   <%= link_to "Are you a patient?", new_patient_session_path %><br />
 <% end %>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+<%- if devise_mapping.registerable? && controller_name != 'registrations' && request.fullpath != "/patient/sign_in" %>
   <%= link_to "Signup", new_registration_path(resource_name) %><br />
 <% end %>
 
