--- a/app/views/shared/_patient_profile.html.erb
+++ b/app/views/shared/_patient_profile.html.erb
@@ -85,8 +85,14 @@
       <div class="container mt-3 border-bottom">
         <div class="row align-items-start">
           <div class="col-4">
-            <%= link_to doctor_consultation_path(past_consultation) do %>
-              <span class="badge badge-primary badge-pill"">DETAIL</span>
+            <% if doctor_signed_in? %>
+              <%= link_to doctor_consultation_path(past_consultation) do %>
+                <span class="badge badge-primary badge-pill"">DETAIL</span>
+              <% end %>
+            <% else %>
+              <%= link_to consultation_path(past_consultation) do %>
+                <span class="badge badge-primary badge-pill"">DETAIL</span>
+              <% end %>
             <% end %>
           </div>
           <div class="col-8">
