--- a/app/views/doctor/consultations/new.html.erb
+++ b/app/views/doctor/consultations/new.html.erb
@@ -3,7 +3,7 @@
   <div class="row mb-5">
     <div class="col-2">
       <%= link_to doctor_patient_path(@patient) do %>
-        <i class="fas fa-chevron-circle-left mt-3 mb-3" style="color: #395579;"></i>
+        <i class="fas fa-chevron-circle-left fa-2x mt-3 mb-3" style="color: #395579;"></i>
       <% end %>
     </div>
     <div class="col-8 mt-3">
